--- a/views/about.hbs
+++ b/views/about.hbs
@@ -17,8 +17,8 @@
 -->
             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
-                <a href="https://web.facebook.com/profile.php?id=100004876217479" class="btn btn-sm btn-info  mr-4 ">Connect</a>
-                <a href="https://wa.me/6281332504194" class="btn btn-sm btn-default float-right">Message</a>
+                <a href="Wa.me/6285865829368" class="btn btn-sm btn-info  mr-4 ">Wa Owner</a>
+                <a href="Wa.me/6285865829368" class="btn btn-sm btn-default float-right">No Ke 2</a>
               </div>
             </div>
 
@@ -29,13 +29,13 @@
                   Athallah Dzaki<span class="font-weight-light">, 16</span>
                 </h5>
                 <div class="h5 font-weight-300">
-                  <i class="ni location_pin mr-2"></i>Malang, Jawa Timur
+                  <i class="ni location_pin mr-2"></i>Tegal, Jawa Tengah
                 </div>
                 <div class="h5 mt-4">
-                  <i class="ni business_briefcase-24 mr-2"></i>`<pre> Lazy Coders </pre>` 
+                  <i class="ni business_briefcase-24 mr-2"></i>`<pre>Dream Bot</pre>` 
                 </div>
                 <div>
-                  <i class="ni education_hat mr-2"></i>MIPA of<a href="http://sman9-mlg.sch.id">SMAN 9 MALANG</a>
+                  <i class="ni education_hat mr-2"></i>REST Api by of<a href="https://wa.me/6287880120452">Dream Production</a>
                 </div>
               </div>
             </div>
