--- a/views/about.hbs
+++ b/views/about.hbs
@@ -26,7 +26,7 @@
 
               <div class="text-center">
                 <h5 class="h3">
-                  Athallah Dzaki<span class="font-weight-light">, 16</span>
+                  Mukh.David<span class="font-weight-light">, 18</span>
                 </h5>
                 <div class="h5 font-weight-300">
                   <i class="ni location_pin mr-2"></i>Tegal, Jawa Tengah
